# libjson

./: meson.build
include/: json.h  json_alloc.h  json_types.h
src/: _internal.h  json_array.c  json_decoder.c  json_error.c  json_number.c  json_object.c  json_value.c
tests/: tester.c
tests/n/: bad_exp_hypen.json  bad_exp_plus.json  ws.json
tests/y/: ext_hex.json  ext_hex_mixed.json  num_exp.json  num_exp_hyphen.json  num_exp_plus.json  num_frac.json  ws.json
